--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/testing-library__jest-dom": "5.14.2",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.3",
+    "babel-plugin-macros": "3.1.0",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
